--- a/index.html
+++ b/index.html
@@ -70,10 +70,10 @@
 			<img src="assets/images/Topaz.jpg" id="gem2">
 		</div>
 		<div class="gem">
-			<img src="assets/Images/Sapphire.jpg" id="gem3">
+			<img src="assets/images/Sapphire.jpg" id="gem3">
 		</div>
 		<div class="gem">
-			<img src="assets/Images/Ruby.jpg" id="gem4">
+			<img src="assets/images/Ruby.jpg" id="gem4">
 		</div>
 	</div>
 
